<resources>
    <string name="app_name">BMoe</string>
    <string name="line_chart">曲线图</string>
    <string name="camp_message">阵营信息</string>
    <string name="net_error">网络异常</string>
    <string name="no_data">没有数据</string>
    <string name="data_loading">数据加载中...</string>
    <string name="total_tickets_count_chart">总票数折线图</string>
    <string name="one_hour_tickets_count_chart">每小时得票数折线图</string>
    <string name="one_hour_tickets_percent_chart">每小时得票率折线图</string>
    <string name="full_screen">全屏</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="camp_id">序号</string>
    <string name="camp_bangumi">动画</string>
    <string name="camp_total">参与人数</string>
    <string name="camp_suc">海选晋级</string>
    <string name="camp_wait">进入复活赛</string>
    <string name="camp_fail">海选淘汰人数</string>
    <string name="camp_suc_percent">晋级率</string>
    <string name="camp_wait_percent">复活率</string>
    <string name="camp_fail_percent">淘汰率</string>
    <string name="draw_chart">绘制</string>
    <string name="all">全部</string>
    <string name="moe">萌</string>
    <string name="light">燃</string>
    <string name="total">总</string>
    <string name="theme_choose">主题选择</string>
    <string name="use">使用</string>
    <string name="using">使用中</string>
    <string name="load_image_error">加载图片失败</string>


</resources>
