<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="2">

    </com.github.mikephil.charting.charts.LineChart>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/spinner_creator"
            android:padding="5dp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/et_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

        <ImageButton
            android:id="@+id/ibtn_left"
            style="@style/RoundButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_keyboard_arrow_left_white_48dp"/>

        <ImageButton
            android:id="@+id/ibtn_right"
            style="@style/RoundButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignTop="@id/ibtn_left"
            android:layout_toRightOf="@id/ibtn_left"
            android:src="@drawable/ic_keyboard_arrow_right_white_48dp"/>



        <ImageButton
            android:id="@+id/ibtn_full_screen"
            style="@style/RectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_zoom_out_map_white_48dp"/>

        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_moe"
                style="@style/SexRadioButton"
                android:text="@string/moe"/>

            <RadioButton
                android:id="@+id/rb_light"
                style="@style/SexRadioButton"
                android:text="@string/light"/>

            <RadioButton
                android:id="@+id/rb_moe_light"
                style="@style/SexRadioButton"
                android:checked="true"
                android:text="@string/total"/>
        </RadioGroup>


    </RelativeLayout>

</LinearLayout>
